Give suggestions left 0 to try and fix an issue on mobile

--- a/css/forms.less
+++ b/css/forms.less
@@ -178,6 +178,7 @@ textarea {
   border-radius: 4px;
   width: 100%;
   top: 32px;
+  left: 0;
   background: #f1e9e0;
   z-index: 1;
   padding: 0;
